@@ -15,6 +15,7 @@ drop_spam : 0
 verbatim_format: 1
 strip_signature: 1
 use_textwrap: 70
+tmpdir : /var/tmp
 
 
 [bas]
